# c-http-server

./: CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  check  check-includes
src/: CMakeLists.txt  config.h  hash-table.c  hash-table.h  http.c  mime.c  mime.h  response.c  response.h  utils.c  utils.h
src/hash-table/: CMakeLists.txt  hash-table.c  hash-table.h
src/mime/: CMakeLists.txt  mime.c
src/mime/mime-table/: mime-lookup.def  mime.list
src/mime/test/: test.c
static/: index.html
test/: index.html
